--- a/app.yaml
+++ b/app.yaml
@@ -1,48 +1,17 @@
-# Copyright 2019 Google LLC
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     https://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
+runtime: go114
+default_expiration: 1d
+instance_class: F1
 
-runtime: go # replace with go111 for Go 1.11
-
-env: flex
-
-manual_scaling:
-  instances: 1
-resources:
-  cpu: 1
-  memory_gb: 0.5
-  disk_size_gb: 10
-
-#[START gae_flex_mysql_env]
 env_variables:
-  # See https://github.com/go-sql-driver/mysql
-  #
-  # Replace INSTANCE_CONNECTION_NAME with the same value as in the
-  # beta_settings section below.
   MYSQL_CONNECTION: root:root@unix(/cloudsql/ynov-api:europe-west1:ynov-immo)/ynov_immo
   GOOGLE_APPLICATION_CREDENTIALS: ./ynov-api-f0d1500a3602.json
   GIN_MODE: release
-  #
-  # If you're testing locally using the Cloud SQL proxy with TCP,
-  # instead use the "tcp" dialer by setting the environment variable:
-  # MYSQL_CONNECTION=user:password@tcp(127.0.0.1:3306)/dbname
-#[END gae_flex_mysql_env]
 
-#[START gae_flex_mysql_settings]
-# Replace INSTANCE_CONNECTION_NAME with the value obtained when configuring your
-# Cloud SQL instance, available from the Google Cloud Console or from the Cloud SDK.
-# For SQL v2 instances, this should be in the form of "project:region:instance".
-# Cloud SQL v1 instances are not supported.
-beta_settings:
-  cloud_sql_instances: ynov-api:europe-west1:ynov-immo
-#[END gae_flex_mysql_settings]
+automatic_scaling:
+  max_instances: 1
+
+handlers:
+- url: .*
+  script: auto
+  secure: always
+
